[package]
name = "bitcoind-async-client"
version = "0.3.0"
edition = "2021"
authors = [
  "Jose Storopoli <jose@alpenlabs.io>",
  "Bibek Pandey <bibek@alpenlabs.io>",
  "Ashish Thapa <ashish@alpenlabs.io>",
  "Prajwol Gyawali <prajwol@alpenlabs.io>",
  "Rajil Bajracharya <rajil@alpenlabs.io>",
  "Sapin Bajracharya <sapin@alpenlabs.io>",
  "Trey Del Bonis <trey@alpenlabs.io>",
]
description = "BitcoinD JSON-RPC Async Client"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alpenlabs/bitcoind-async-client"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "bitcoin"]

[features]

[dependencies]
base64 = "0.22.1"
bitcoin = { version = "0.32.6", features = ["serde"] }
hex = { package = "hex-conservative", version = "0.2.1" } # for optimization keep in sync with bitcoin
reqwest = { version = "0.12.21", default-features = false, features = [
  "http2",
  "rustls-tls",
  "charset",
  "zstd",
  "json",
] }
secp256k1 = { version = "0.29.0", features = [ # for optimization keep in sync with bitcoin
  "global-context",
] }
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["raw_value"] }
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", default-features = false }

[dev-dependencies]
anyhow = "1.0.98"
corepc-node = { version = "0.8.0", features = ["29_0", "download"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
